2007-05-29  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-fixed.h:
	(clutter_cosx):
	(clutter_cosi):
	Fixed wrong sign in cos -> sin tranformation.

	* clutter/clutter-behaviour-ellipse.c:
	(clutter_behaviour_ellipse_advance):
	Replaced coordinace calculation for tilted ellipse with a sane
	algorithm.

	* examples/behave.c:
	Added tilt parameter to the example ellptic path.
	
2007-05-29  Tomas Frydrych  <tf@openedhand.com>

	* clutter/cogl/gles/cogl.c:
	(cogl_setup_viewport):
	Fixed z_camera calculation.
	
2007-05-28  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-texture.c: (clutter_texture_unrealize):
	Dont even try to move texture pixels from video -> system
	ram on unrealisation for GL/ES

2007-05-28  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-stage.c: (clutter_stage_get_actor_at_pos):
	Fix for GL/ES. Barring texture reads this means all clutter 
        functionality now works on GL/ES! (no doubt with a few yet to
	be discovered bugs)

2007-05-28  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-backend.c:
	* clutter/clutter-backend.h:
	* clutter/glx/clutter-stage-glx.c:
	* clutter/glx/clutter-backend-glx.c:
	Fix up rendering pipeline removing clutter_backend_XXX_stage_paint
	and adding clutter_backend_XXX_redraw instead. Duplicates less
	code in backends, avoids clutter_actor_paint() getting called
	before stage is set up (viewport wise) and unbreaks things like
	picking.

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	* clutter/clutter-main.c:
	* clutter/clutter-private.h:
	* clutter/clutter-stage.c: (clutter_stage_get_actor_at_pos):
	Redo picking functionality a different way (via color indexing)
	as to provide more flexibility, possibly speed and more likely
	work with GL/ES (doesn't currently however - not sure why).

	* clutter/clutter-group.c:
	Add groups own 'pick' method.

	* clutter/cogl/cogl.h:
	* clutter/cogl/gl/cogl.c:
	* clutter/cogl/gles/cogl.c:
	Move clipping funtionality into cogl.
