@@ -11,7 +11,6 @@ clutter_timeline_get_type
 clutter_media_get_type
 clutter_behaviour_get_type
 clutter_alpha_get_type
-clutter_smoothstep_get_type
 clutter_behaviour_bspline_get_type
 clutter_behaviour_ellipse_get_type
 clutter_behaviour_opacity_get_type
